<resources>
    <string name="app_name">СЭД</string>

    <string name="account_name">sapotero.sed</string>
    <string name="login">Войти</string>

    <string name="password">Пароль</string>
    <string name="username">Логин</string>


    <string name="get_token_url">http://mobile.esd.n-core.ru/token/%1$s.json?password=%2$s</string>
    <string name="account_already_exists">Аккаун уже создан</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_documents">Документы</string>
    <string name="menu_files">Файлы</string>
    <string name="menu_basic">Основные вещи</string>
    <string name="menu_test">Тест</string>
    <string name="fragment_main">Настройки</string>
    <string name="fragment_files">Файлы</string>
    <string name="fragment_gallery">Документы</string>
    <array name="test" >
        <item name="test">test</item>
    </array>
</resources>
