<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_basic">
        <group android:checkableBehavior="single">
            <item android:id="@+id/settings"
                  android:icon="@android:drawable/ic_menu_manage"
                  android:title="@string/menu_settings" />

            <item android:id="@+id/documents"
                  android:icon="@android:drawable/ic_menu_gallery"
                  android:title="@string/menu_documents" />

            <item android:id="@+id/nav_files"
                  android:icon="@android:drawable/ic_menu_slideshow"
                  android:title="@string/menu_files" />
        </group>
    </item>

    <item android:title="@string/menu_test">
        <menu>
            <item android:id="@+id/nav_share"
                  android:icon="@android:drawable/ic_menu_share"
                  android:title="@string/menu_test" />
            <item android:id="@+id/nav_send"
                  android:icon="@android:drawable/ic_menu_send"
                  android:title="@string/menu_test" />
            <item android:id="@+id/nav_send2"
                  android:icon="@android:drawable/ic_dialog_map"
                  android:title="@string/menu_test" />
        </menu>
    </item>

</menu>