<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".Activity.LoginActivity">


    <View
        android:id="@+id/anchor_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_alignParentTop="true"
        android:layout_marginTop="148dp"
        android:layout_alignEnd="@+id/password"
        android:layout_alignStart="@+id/password"
        android:hint="@string/username"
        android:text="admin"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:text="123456"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
